Code cleanups
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>